--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
+    "seedrandom": "^3.0.5",
+    "@types/seedrandom": "^3.0.8",
     "typescript": "^5.8.3",
     "@commitlint/config-conventional": "^18.6.1",
     "@commitlint/cli": "^18.6.1"
