--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,6 @@ jobs:
 
       - name: Run TypeScript type check
         run: npm run typecheck # Ensure types are correct
+
+      - name: Run unit tests
+        run: npm test
