--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand",
     "lint": "eslint --config .eslintrc.cjs \"**/*.ts\"",
     "typecheck": "tsc --noEmit",
     "prepare": "husky install"
@@ -17,17 +17,20 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/seedrandom": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^8.57.1",
     "husky": "^9.1.7",
+    "jest": "^30.0.5",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "seedrandom": "^3.0.5",
-    "@types/seedrandom": "^3.0.8",
-    "typescript": "^5.8.3",
-    "@commitlint/config-conventional": "^18.6.1",
-    "@commitlint/cli": "^18.6.1"
+    "ts-jest": "^29.4.0",
+    "typescript": "^5.8.3"
   },
   "lint-staged": {
     "*.ts": [
