--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,9 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   // Enable Path Intellisense suggestions
-  "path-intellisense.autoSlashAfterDirectory": true
+  "path-intellisense.autoSlashAfterDirectory": true,
+  "files.exclude": {
+    // скрыть все .meta файлы
+    "**/*.meta": true
+  }
 }
