--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,8 +35,8 @@
     "build",
     "settings"
   ],
-  // "include": [
-  //   "**/*.ts",
-  //   "**/*.d.ts"
-  // ]
+  "include": [
+    "**/*.ts",
+    "**/*.d.ts"
+  ]
 }
