--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,10 @@ local/
 # Temporary build data
 temp/
 # Final build output
-build/
+build/               # ignore all build outputs
+!build/web/          # allow tracking of the web build directory itself
+build/web/**         # ignore generated files within the web build
+!build/web/.gitkeep  # keep placeholder so the directory exists in git
 # Editor log files
 logs/
 # Temporary meta files created by the editor
