--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "typecheck": "tsc --noEmit",
     "prepare": "husky install",
     "build:web": "npx cocoscli build --platform web-mobile --output build/web-mobile",
-    "postinstall": "npx cocoscli --version # confirm cocos CLI is installed"
+    "postinstall": "npx cocoscli --version # confirm cocos CLI is installed",
+    "release:archive": "tar -C build -czf release.tar.gz web-mobile"
   },
   "// build:web script": "Generates the web-mobile build into build/web-mobile for GitHub Pages",
   "// postinstall script": "Verifies that cocoscli is available after npm install",
+  "// release:archive script": "Packages build/web-mobile into release.tar.gz for pushing to the release branch",
   "keywords": [],
   "author": "",
   "license": "ISC",
