--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Extract release archive
         run: |
           mkdir -p deploy
-          tar -xzf release.tar.gz -C deploy
+          tar -xzf release.tar.gz --strip-components=1 -C deploy
 
       - name: Publish to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
