--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,7 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 # Store MP3 sound files using Git LFS
 *.mp3 filter=lfs diff=lfs merge=lfs -text
+# Store WAV sound files using Git LFS
+*.wav filter=lfs diff=lfs merge=lfs -text
+# Store OGG sound files using Git LFS
+*.ogg filter=lfs diff=lfs merge=lfs -text
